# firework-rust

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
src/firework/: explosion.rs  mod.rs  sparkle.rs  vector2d.rs
