[package]
name = "firework-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
simple-error = "0.3.0"
femtovg = "0.3.7"
winit = { version = "0.26.1", features = ["x11"] }
glutin = { version = "0.28.0", features = ["x11"] }