[package]
name = "firework-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
simple-error = "0.2.3"
femtovg = "0.3.7"
winit = { version = "0.27.5", features = ["x11"] }
glutin = { version = "0.30.3", features = ["x11"] }